# bitsliced-op

./: Cargo.toml  README.md
.github/workflows/: semver.yml
chores/: semver.py
src/: benchmark.rs  lib.rs  main.rs  transpose.rs
